updated read me

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  background-color: rgb(196, 196, 196);
 }
 /* adding current day */
 #currentDay {
